--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -1,5 +1,9 @@
 <aura:component>
-    <c:header/>
+    <header>
+        <c:header/>
+    </header>
     
-    <c:footer/>
+    <footer>
+        <c:footer/>
+    </footer>
 </aura:component>	
