--- a/final/force-app/main/default/aura/header/header.cmp
+++ b/final/force-app/main/default/aura/header/header.cmp
@@ -1,8 +1,23 @@
 <aura:component>
-    <div class="block">
-        <div class="block-item"><lightning:button label="Home" title="Home" onclick="{! c.home }"/></div>
-        <div class="block-item"><lightning:button label="Dealers" title="Dealers" onclick="{! c.dealers }"/></div>
-        <div class="block-item"><lightning:button label="Products" title="Products" onclick="{! c.products }"/></div>
-        <div class="block-item"><lightning:button label="TestDrive" title="Test-drive" onclick="{! c.testDrive }"/></div>
-    </div>
+    <lightning:layout horizontalAlign="space" class="slds-page-header slds-page-header--object-home">
+        <lightning:layoutItem>
+            <lightning:icon iconName="action:goal" alternativeText="My Camping"/>
+        </lightning:layoutItem>
+        <!--<lightning:layoutItem padding="around-small">-->
+        <!--  <div class="page-section page-header"> -->
+                <lightning:layoutItem padding="around-small">
+                    <lightning:button label="Home" title="Home" onclick="{! c.home }"/>
+                </lightning:layoutItem>
+                <lightning:layoutItem padding="around-small">
+                    <lightning:button label="Dealers" title="Dealers" onclick="{! c.dealers }"/>
+                </lightning:layoutItem>
+                <lightning:layoutItem padding="around-small">
+                    <lightning:button label="Products" title="Products" onclick="{! c.products }"/>
+                </lightning:layoutItem>
+                <lightning:layoutItem padding="around-small">
+                    <lightning:button label="TestDrive" title="Test-drive" onclick="{! c.testDrive }"/>
+                </lightning:layoutItem>
+        <!--    </div> -->
+        <!--</lightning:layoutItem>-->
+    </lightning:layout>    
 </aura:component>	
