--- a/final/force-app/main/default/aura/header/header.css
+++ b/final/force-app/main/default/aura/header/header.css
@@ -1,3 +1,9 @@
 .THIS {
     width: 100%;
 }
+
+.THIS.c-container{
+    border: 1px solid #d8dde6;
+    margin: 10px 0 20px 0;
+    padding-right: 30%;
+}
