--- a/final/force-app/main/default/pages/LadaCenterHome.page
+++ b/final/force-app/main/default/pages/LadaCenterHome.page
@@ -1,10 +1,13 @@
-<apex:page applyHtmlTag="false" showHeader="false">        
-    <apex:includeLightning/>
-    <div id='main'/>
+<apex:page >        
+    <apex:includeLightning />
+    <div id='main'>
+        
+    </div>
     <script>
         $Lightning.use("c:my", function() {
-            $Lightning.createComponent("aura:component",
-                "c:main",
+            $Lightning.createComponent("c:main",
+                {},
+                'main',
                 function(cmp) {
                     console.log("Component is created!");
                     console.log(cmp);
