wrote first test class

--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -1,9 +1,9 @@
-<aura:component>
-    <header>
+<aura:component implements="forceCommunity:availableForAllPageTypes">
+  <!--<header>
         <c:header/>
-    </header>
-    <c:productList/>
-    <footer>
+    </header>-->
+  <c:productList />
+  <!--<footer>
         <c:footer/>
-    </footer>
+    </footer>-->
 </aura:component>
