create map, restruct component model

--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -1,9 +1,10 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
-  <!--<header>
-        <c:header/>
-    </header>-->
+  <header>
+    <c:header />
+  </header>
+  <c:services />
   <c:productList />
-  <!--<footer>
-        <c:footer/>
-    </footer>-->
+  <footer>
+    <c:footer />
+  </footer>
 </aura:component>
