--- a/final/force-app/main/default/aura/testDrive/testDrive.cmp
+++ b/final/force-app/main/default/aura/testDrive/testDrive.cmp
@@ -1,6 +1,19 @@
-<aura:component>
+<aura:component
+  implements="forceCommunity:availableForAllPageTypes"
+  controller="LadaCaseController"
+>
+  <aura:attribute
+    name="newCase"
+    type="Case"
+    default="{ 'sobjectType': 'Case',
+                     'Subject': '',
+                     'Origin': 'Web',
+                     'Status': 'New',
+					           'SuppliedEmail':'',
+             		     'Description':''
+                   }"
+  />
   <aura:attribute name="isModalOpen" type="boolean" default="false" />
-  <aura:attribute name="car" type="Product2" />
   <div class="slds-m-around_xx-large">
     <lightning:button
       variant="neutral"
@@ -30,17 +43,46 @@
               id="modal-heading-01"
               class="slds-text-heading_medium slds-hyphenate"
             >
-              {!v.car.Name}
+              <legend
+                id="newCampaingForm"
+                class="slds-text-heading--small slds-p-vertical--medium"
+              >
+                Have a Question?
+              </legend>
             </h2>
           </header>
           <div
             class="slds-modal__content slds-p-around_medium"
             id="modal-content-id-1"
           >
-            <p>{!v.car.ProductCode}</p>
-            <p>{!v.car.Family}</p>
-            <p>{!v.car.Description__c}</p>
-            <p>{!v.car.Equipment__c}</p>
+            <p>
+              <lightning:input
+                aura:id="subject"
+                label="Subject"
+                name="Subject"
+                value="{!v.newCase.Subject}"
+                required="true"
+              />
+            </p>
+            <p>
+              <lightning:input
+                aura:id="email"
+                type="Email"
+                name="Email"
+                value="{!v.newCase.SuppliedEmail}"
+                placeholder="youraddress@company.com"
+                label="Email"
+              />
+            </p>
+            <p>
+              <lightning:textarea
+                aura:id="description"
+                name="Description"
+                label="Description"
+                placeholder="type here description..."
+                value="{!v.newCase.Description}"
+              />
+            </p>
           </div>
           <footer class="slds-modal__footer">
             <lightning:button
