--- a/final/force-app/main/default/aura/header/header.cmp
+++ b/final/force-app/main/default/aura/header/header.cmp
@@ -10,39 +10,10 @@
       <lightning:button label="Home" title="Home" onclick="{! c.home }" />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button
-        label="Dealers"
-        title="Dealers"
-        onclick="{! c.dealers }"
-      />
+      <c:questionComponent />
     </lightning:layoutItem>
     <lightning:layoutItem padding="around-small">
-      <lightning:button
-        label="Services"
-        title="Services"
-        onclick="{! c.services }"
-      />
-    </lightning:layoutItem>
-    <lightning:layoutItem padding="around-small">
-      <lightning:button
-        label="Products"
-        title="Products"
-        onclick="{! c.products }"
-      />
-    </lightning:layoutItem>
-    <lightning:layoutItem padding="around-small">
-      <lightning:button
-        label="Ask a Question"
-        title="Question"
-        onclick="{! c.question }"
-      />
-    </lightning:layoutItem>
-    <lightning:layoutItem padding="around-small">
-      <lightning:button
-        label="TestDrive"
-        title="Test-drive"
-        onclick="{! c.testDrive }"
-      />
+      <c:testDrive />
     </lightning:layoutItem>
   </lightning:layout>
 </aura:component>
