--- a/final/force-app/main/default/aura/main/main.css
+++ b/final/force-app/main/default/aura/main/main.css
@@ -1,12 +1,25 @@
 .THIS {
-    font-family: sans-serif;
+  font-family: sans-serif;
 }
-header.THIS{
-    width: 100%;
-    height: 10%;
+header.THIS {
+  width: 100%;
+  height: 10%;
 }
-footer.THIS{
-    width: 100%;
-    height: 10%;
-    background-color: black;
+footer.THIS {
+  width: 100%;
+  height: 10%;
+  background-color: black;
+}
+.THIS.content {
+  display: flex;
+}
+.THIS.services {
+  order: 1;
+  width: 40%;
+  flex: 0 0 auto;
+}
+.THIS.products {
+  order: 2;
+  width: auto;
+  flex: 1 0 auto;
 }
