--- a/final/force-app/main/default/aura/product/product.cmp
+++ b/final/force-app/main/default/aura/product/product.cmp
@@ -1,7 +1,7 @@
 <aura:component>
   <aura:attribute name="car" type="Product2" />
   <dl class="item">
-    <div class="slds-region_narrow" style="width: 580px">
+    <div class="slds-region_narrow" style="width: 500px">
       <dl class="slds-dl_inline">
         <dt class="slds-dl_inline__label">Name:</dt>
         <dd class="slds-dl_inline__detail">{!v.car.Name}</dd>
@@ -9,6 +9,9 @@
         <dd class="slds-dl_inline__detail">{!v.car.ProductCode}</dd>
         <dt class="slds-dl_inline__label">Family</dt>
         <dd class="slds-dl_inline__detail">{!v.car.Family}</dd>
+        <div>
+          <c:modalForCar car="{!v.car}" />
+        </div>
       </dl>
     </div>
   </dl>
