--- a/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
@@ -1,11 +1,11 @@
 <aura:component>
-  <aura:attribute name="isModalOpen" type="boolean" default="false" />
+<aura:attribute name="isModalOpen" type="boolean" default="false" />
   <aura:attribute name="car" type="Product2" />
   <div class="slds-m-around_xx-large">
     <lightning:button
-      variant="neutral"
-      label="Details"
-      title="Details"
+      variant="brand"
+      label="What is Modal/PopUp Box?"
+      title="What is Modal/PopUp Box?"
       onclick="{! c.openModel }"
     />
     <aura:if isTrue="{!v.isModalOpen}">
@@ -30,17 +30,21 @@
               id="modal-heading-01"
               class="slds-text-heading_medium slds-hyphenate"
             >
-              {!v.car.Name}
+              Have a Question?
             </h2>
           </header>
           <div
             class="slds-modal__content slds-p-around_medium"
             id="modal-content-id-1"
           >
-            <p>{!v.car.ProductCode}</p>
-            <p>{!v.car.Family}</p>
-            <p>{!v.car.Description__c}</p>
-            <p>{!v.car.Equipment__c}</p>
+            <form>
+              <input type="hidden" name="orgid" value="00D5j00000AHFVr"/>
+              <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /></br>
+              <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /></br>
+              <label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /></br>
+              <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /></br>
+              <label for="description">Description</label><textarea name="description"></textarea></br>
+            </form>
           </div>
           <footer class="slds-modal__footer">
             <lightning:button
@@ -51,8 +55,8 @@
             />
             <lightning:button
               variant="brand"
-              label="OK"
-              title="OK"
+              label="Submit"
+              title="Submit"
               onclick="{!c.submitDetails}"
             />
           </footer>
@@ -60,5 +64,5 @@
       </section>
       <div class="slds-backdrop slds-backdrop_open"></div>
     </aura:if>
-  </div>
-</aura:component>
+  </div>  
+</aura:component>	
