write tests and modify controllers

--- a/final/force-app/main/default/aura/main/main.cmp
+++ b/final/force-app/main/default/aura/main/main.cmp
@@ -1,6 +1,7 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
   <div class="content">
     <div class="services">
+      <c:questionComponent />
       <c:testDrive />
       <c:services />
     </div>
