--- a/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
+++ b/final/force-app/main/default/aura/questionComponent/questionComponent.cmp
@@ -1,11 +1,24 @@
-<aura:component>
-<aura:attribute name="isModalOpen" type="boolean" default="false" />
-  <aura:attribute name="car" type="Product2" />
+<aura:component
+  implements="forceCommunity:availableForAllPageTypes"
+  controller="LadaCaseController"
+>
+  <aura:attribute
+    name="newCase"
+    type="Case"
+    default="{ 'sobjectType': 'Case',
+                     'Subject': '',
+                     'Origin': 'Web',
+                     'Status': 'New',
+					           'SuppliedEmail':'',
+             		     'Description':''
+                   }"
+  />
+  <aura:attribute name="isModalOpen" type="boolean" default="false" />
   <div class="slds-m-around_xx-large">
     <lightning:button
       variant="brand"
-      label="What is Modal/PopUp Box?"
-      title="What is Modal/PopUp Box?"
+      label="Question"
+      title="Question"
       onclick="{! c.openModel }"
     />
     <aura:if isTrue="{!v.isModalOpen}">
@@ -30,21 +43,46 @@
               id="modal-heading-01"
               class="slds-text-heading_medium slds-hyphenate"
             >
-              Have a Question?
+              <legend
+                id="newCampaingForm"
+                class="slds-text-heading--small slds-p-vertical--medium"
+              >
+                Have a Question?
+              </legend>
             </h2>
           </header>
           <div
             class="slds-modal__content slds-p-around_medium"
             id="modal-content-id-1"
           >
-            <form>
-              <input type="hidden" name="orgid" value="00D5j00000AHFVr"/>
-              <label for="name">Contact Name</label><input  id="name" maxlength="80" name="name" size="20" type="text" /></br>
-              <label for="email">Email</label><input  id="email" maxlength="80" name="email" size="20" type="text" /></br>
-              <label for="phone">Phone</label><input  id="phone" maxlength="40" name="phone" size="20" type="text" /></br>
-              <label for="subject">Subject</label><input  id="subject" maxlength="80" name="subject" size="20" type="text" /></br>
-              <label for="description">Description</label><textarea name="description"></textarea></br>
-            </form>
+            <p>
+              <lightning:input
+                aura:id="subject"
+                label="Subject"
+                name="Subject"
+                value="{!v.newCase.Subject}"
+                required="true"
+              />
+            </p>
+            <p>
+              <lightning:input
+                aura:id="email"
+                type="Email"
+                name="Email"
+                value="{!v.newCase.SuppliedEmail}"
+                placeholder="youraddress@company.com"
+                label="Email"
+              />
+            </p>
+            <p>
+              <lightning:textarea
+                aura:id="description"
+                name="Description"
+                label="Description"
+                placeholder="type here description..."
+                value="{!v.newCase.Description}"
+              />
+            </p>
           </div>
           <footer class="slds-modal__footer">
             <lightning:button
@@ -55,14 +93,14 @@
             />
             <lightning:button
               variant="brand"
-              label="Submit"
-              title="Submit"
-              onclick="{!c.submitDetails}"
+              label="OK"
+              title="OK"
+              onclick="{!c.createCase}"
             />
           </footer>
         </div>
       </section>
       <div class="slds-backdrop slds-backdrop_open"></div>
     </aura:if>
-  </div>  
-</aura:component>	
+  </div>
+</aura:component>
