modify view of services

--- a/final/force-app/main/default/aura/footer/footer.cmp
+++ b/final/force-app/main/default/aura/footer/footer.cmp
@@ -1,5 +1,5 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
-  <div>
+  <div style="text-align: center">
     <a href="https://github.com/SlavaNoMercy/finalTask/tree/master/final"
       >Code at Github</a
     >
