--- a/final/force-app/main/default/aura/product/product.cmp
+++ b/final/force-app/main/default/aura/product/product.cmp
@@ -1,7 +1,7 @@
-<aura:component>
+<aura:component implements="forceCommunity:availableForAllPageTypes">
   <aura:attribute name="car" type="Product2" />
   <dl class="item">
-    <div class="slds-region_narrow" style="width: 500px">
+    <div class="slds-region_narrow" style="width: 400px">
       <dl class="slds-dl_inline">
         <dt class="slds-dl_inline__label">Name:</dt>
         <dd class="slds-dl_inline__detail">{!v.car.Name}</dd>
