--- a/final/force-app/main/default/aura/footer/footer.cmp
+++ b/final/force-app/main/default/aura/footer/footer.cmp
@@ -1,6 +1,8 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes">
   <div style="text-align: center">
-    <a href="https://github.com/SlavaNoMercy/finalTask/tree/master/final"
+    <a
+      href="https://github.com/SlavaNoMercy/finalTask/tree/master/final"
+      class="refStyle"
       >Code at Github</a
     >
   </div>
