--- a/final/force-app/main/default/aura/main/main.css
+++ b/final/force-app/main/default/aura/main/main.css
@@ -5,9 +5,9 @@ header.THIS {
   width: 100%;
   height: 10%;
 }
-footer.THIS {
+.cMain.cFooter {
   width: 100%;
-  height: 10%;
+  height: 2vh;
   background-color: black;
 }
 .THIS.content {
