--- a/final/force-app/main/default/aura/productList/productList.cmp
+++ b/final/force-app/main/default/aura/productList/productList.cmp
@@ -4,6 +4,8 @@
 >
   <aura:attribute name="cars" type="Product2[]" />
   <aura:handler name="init" action="{!c.doInit}" value="{!this}" />
+  <img src="{!$Resource.LadaCenterHome + '/ladaHomePage.jpg'}" />
+  <h1>Lada Car Gallery</h1>
   <div class="container">
     <aura:iteration items="{!v.cars}" var="car">
       <lightning:layout multipleRows="true" class="layoutBigCardsColumn">
