--- a/final/force-app/main/default/aura/services/services.cmp
+++ b/final/force-app/main/default/aura/services/services.cmp
@@ -6,7 +6,7 @@
   <aura:attribute name="isModalOpen" type="boolean" default="false" />
   <aura:handler name="init" action="{!c.doInit}" value="{!this}" />
   <c:mapForLada />
-  <div class="left-side-bar">
+  <!--<div class="left-side-bar">
     <aura:iteration items="{!v.services}" var="service">
       <div class="slds-m-around_xx-large">
         <lightning:button
@@ -74,5 +74,5 @@
         </aura:if>
       </div>
     </aura:iteration>
-  </div>
+  </div>-->
 </aura:component>
